<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application Level Strings -->
    <string name="app_name">CS598MovieCatalog</string>
    <string name="main_title">CSC 598 Movie Catalog Project</string>
    <string name="main_movie_list">Movie List</string>
    <string name="main_category_list">Category List</string>
    <string name="app_quit">Quit</string>
    
    <!-- Image Data Strings -->
    <string name="ycrcb_image_data">imageData</string>
    <string name="ycrcb_image_width">imageWidth</string>
    <string name="ycrcb_image_height">imageHeight</string>
    
    <!-- Aquired Movie Info Strings -->
    <string name="aquired_movie_info">aquired_movie_info</string>
    <string name="deleted_movie_info">deleted_movie_info</string>
    <string name="added_movie_info">added_movie_info</string>
    
    <!-- Aquired Category Info Strings -->
    <string name="deleted_category_info">deleted_category_info</string>
    <string name="aquired_category_info">aquired_category_info</string>
    
    <!-- Category List Strings -->
    <string name="category_title">Title</string>
    <string name="category_count">Count</string>
    <string name="category_add">Add Category</string>
    
    <!-- Movie List Strings -->
    <string name="movie_list_item_title">Title: </string>
    <string name="movie_list_item_rated">Rated: </string>
    <string name="movie_list_item_sort">Sorted By: %1$s</string>
    <string name="movie_add_manual">Add Manual</string>
    <string name="movie_add_camera">Add Camera</string>
    <string name="movie_empty_text">There are no movies
         currently in the system</string>

    <!-- Category Info Strings -->
    <string name="category_info_main_title">Category: %1$s</string>
    <string name="category_info_add">Add Movie</string>
    <string name="category_info_remove">Remove</string>
    <string name="category_info_cancel">Back</string>
    <string name="category_add_movie_empty">No movies currently in system.</string>
    
    <!-- Movie Info Strings -->
    <string name="movie_info_intent_title">movie_info_intent_title</string>
    <string name="movie_info_main_title">Movie Information</string>
	<string name="movie_info_title">Title:</string>
	<string name="movie_info_rated">Rated:</string>
    <string name="movie_info_genre">Genre:</string>
    <string name="movie_info_format">Format:</string>
    <string name="movie_info_personalrating">Personal Rating:</string>
    <string name="movie_info_personalrating_text"></string>
    <string name="movie_info_runtime">Run Time:</string>
    <string name="movie_info_runtime_mins">Minutes</string>
    <string name="movie_info_delete">Delete</string>
    <string name="movie_info_commit">Commit</string>
    <string name="movie_info_cancel">Back</string>
    
    <!-- Category Add Dialog Strings -->
    <string name="category_add_title_label">Title:</string>
    <string name="category_add_ok">Add</string>
    <string name="category_add_cancel">Back</string>
    
    <!-- Category Context Menu Strings -->
    <string name="category_menu_show">Show</string>
    <string name="category_menu_delete">Delete</string>
</resources>
