<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/movie_list_item_sort_layout" >
        
        <TextView android:id="@+id/movie_list_item_title" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_list_item_title" />
        
        <TextView android:id="@+id/movie_list_item_rated" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_list_item_rated" />
        
    </LinearLayout>
    
    <LinearLayout android:id="@+id/movie_list_item_sort_layout" 
        android:orientation="vertical"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
        
        <TextView android:id="@+id/movie_list_item_sort" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_list_item_sort" />
        
        <TextView android:id="@+id/movie_list_item_sort_val" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_list_item_sort_val" />
        
    </LinearLayout>

</RelativeLayout>